<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mini_margin"
    app:cardCornerRadius="@dimen/base_margin"
    app:cardBackgroundColor="@color/transparent"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/Layout_CardOfElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/base_margin">

        <TextView
            android:id="@+id/ProductName"
            android:text="@string/default_product_name"
            style="@style/RecycleTitleTextView" />

        <LinearLayout
            android:id="@+id/LayoutPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PricePhoneText"
                android:text="@string/launch_price"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/PricePhoneData"
                android:text="@string/default_price"
                style="@style/RecycleTextView"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutLaunchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LaunchDateText"
                android:text="@string/launch_date"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/LaunchDateData"
                android:text="@string/default_date"
                style="@style/RecycleTextView"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutCameraScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CameraScoreText"
                android:text="@string/camera_score"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/CameraScoreData"
                android:text="@string/default_rating"
                style="@style/RecycleTextView"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>