<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/LoginText"
        android:text="@string/login"
        style="@style/TitleText"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/EnterLayout"
        style="@style/LinearFieldEnterText"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginText">

        <EditText
            android:id="@+id/EnterDataField"
            style="@style/FieldEnterText"
            android:hint="@string/email_or_phone"
            android:drawableStart="@drawable/user"/>

        <EditText
            android:id="@+id/PasswordField"
            style="@style/FieldEnterText"
            android:hint="@string/password"
            android:drawableStart="@drawable/lock"/>

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:text="@string/remember_me"/>

    </LinearLayout>

    <Button
        android:id="@+id/EnterButton"
        android:text="@string/log_in"
        style="@style/EnterButton"
        android:layout_marginBottom="128dp"

        app:layout_constraintTop_toBottomOf="@+id/EnterLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>